--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto&display=swap');
+
 body {
-    background-color: rgb(178, 178, 255);
+    background: rgb(173, 183, 230);
+}
+
+h1 {
+    color: white;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+}
+
+p {
+    color: white;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
 }
