--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-    color: white;
+    color: rgb(112, 89, 245);
     text-align: center;
     font-family: 'Lato', sans-serif;
 }
