--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto&display=swap');
 
 body {
-    background: rgb(173, 183, 230);
+    background-image: url(../images/background-image.jpg);
 }
 
 h1 {
-    color: rgb(112, 89, 245);
+    color: red;
     text-align: center;
     font-family: 'Lato', sans-serif;
+    font-size: 2rem;
 }
 
 p {
-    color: white;
+    color: red;
     text-align: center;
     font-family: 'Lato', sans-serif;
+    font-size: 1.5rem;
+}
+
+.container {
+    background-color: #fcd4d4;
+    box-sizing: border-box;
+    width: 85%;
+    height: 65vh;
+    max-height: 450px;
+    max-width: 830px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1%;
 }
