--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@ body {
 h1 {
     color: red;
     text-align: center;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato',
+        sans-serif;
     font-size: 2rem;
 }
 
@@ -28,4 +29,5 @@ p {
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
+    border-radius: 10px;
 }
