--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 {
-    color: red;
+    color: rgb(248, 8, 120);
     text-align: center;
     font-family: 'Lato',
         sans-serif;
@@ -13,7 +13,7 @@ h1 {
 }
 
 p {
-    color: red;
+    color: rgb(248, 8, 120);
     text-align: center;
     font-family: 'Lato', sans-serif;
     font-size: 1.5rem;
@@ -41,13 +41,33 @@ p {
 }
 
 .btn:hover {
-    border-color: black;
+    border-color: rgb(247, 16, 93);
 }
 
 .btn.correct {
-    background-color: green;
+    background-color: rgb(186, 252, 186);
 }
 
 .btn.wrong {
-    background-color: red;
+    background-color: rgb(253, 103, 103);
+}
+
+.start-btn {
+    color: rgb(248, 8, 120)
+}
+
+.start-btn,
+.next-btn {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.controls {
+    /* I want this to be in the middle of the question container ask Mentor perhaps*/
+    padding: 1%;
+    border-radius: 10px;
+}
+
+.hide {
+    display: none;
 }
